<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnZoomIn"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/zoom_out"
                    android:id="@+id/btnZoomOut"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnFadeIn"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/fade_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/fade_out"
                    android:id="@+id/btnFadeOut"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSlideLeft"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/slide_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/slide_right"
                    android:id="@+id/btnSlideRight"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSlideUp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/slide_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/slide_down"
                    android:id="@+id/btnSlideDown"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnZoomInFadeIn"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_fade_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/zoom_fade_out"
                    android:id="@+id/btnZoomOutFadeOut"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnRotate"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/rotate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:text="@string/move"
                    android:id="@+id/btnMove"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>